# gridstatus

./: .gitignore  main.aux  main.out  main.py  pyproject.toml
paper/: main.aux  main.bbl  main.blg  main.out  main.tex  references.bib
paper_multisource/: Makefile  main.tex  references.bib
paper_multisource/results/: multihub_metrics.csv
paper_multisource/scripts/: forecast_multihub.py  generate_figures.py  generate_monthly_mae_plot.py
scripts/: analyze_4cp.py  analyze_price_skew.py  analyze_renewables.py  analyze_uri.py  benchmark_comparison.py  calculate_monthly_mae.py  check_hub_availability.py  debug_api_fetch.py  debug_fetch_2025.py  fetch_all_hubs_archive.py  fetch_all_hubs_direct.py  fetch_btc_price.py  fetch_data.py  fetch_data_scraper.py  fetch_gas_price.py  fetch_historical_ercot.py  fetch_load.py  fetch_weather.py  forecast.py  forecast_cv.py  forecast_extreme_events.py  forecast_ml.py  forecast_ml_weather.py  forecast_quantile.py  paper_stats.py  tune_optuna.py  visualize.py
scripts/archive/: check_docs.py  debug_docs.py  debug_ercot_fetch.py  list_datasets.py  test_history.py
